--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,17 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript2-editor.jsversion=ECMA7
+browser.autorefresh.Chrome=true
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference.UtopiaClient-public_html=public_html
 file.reference.UtopiaClient-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.UtopiaClient-public_html}
+start.file=index.html
 test.folder=${file.reference.UtopiaClient-test}
+web.context.root=/UtopiaClient
